// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CheckboxBeta renders checked state 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <label
        class="om-react-ui-checkbox-beta"
      >
        <div
          class="om-react-ui-checkbox-beta-box-wrapper"
        >
          <div
            class="om-react-ui-checkbox-beta-box p-checkbox p-component p-highlight"
            data-p-disabled="false"
            data-p-highlight="true"
            data-pc-name="checkbox"
            data-pc-section="root"
          >
            <input
              aria-invalid="false"
              checked=""
              class="p-checkbox-input"
              data-pc-section="input"
              type="checkbox"
            />
            <div
              class="p-checkbox-box"
              data-p-disabled="false"
              data-p-highlight="true"
              data-pc-section="box"
            >
              <svg
                fill="currentColor"
                height="14"
                viewBox="0 0 24 24"
                width="14"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  clip-rule="evenodd"
                  d="M21.5099 6.40005L10.12 19.7129L2.55029 12.2976L3.94985 10.8689L9.99122 16.787L19.9902 5.09985L21.5099 6.40005Z"
                  fill-rule="evenodd"
                />
              </svg>
            </div>
          </div>
        </div>
        <div
          class="om-react-ui-checkbox-beta-content"
        >
          <span
            class="om-react-ui-checkbox-beta-label"
          >
            Test
          </span>
        </div>
      </label>
    </div>
  </body>,
  "container": <div>
    <label
      class="om-react-ui-checkbox-beta"
    >
      <div
        class="om-react-ui-checkbox-beta-box-wrapper"
      >
        <div
          class="om-react-ui-checkbox-beta-box p-checkbox p-component p-highlight"
          data-p-disabled="false"
          data-p-highlight="true"
          data-pc-name="checkbox"
          data-pc-section="root"
        >
          <input
            aria-invalid="false"
            checked=""
            class="p-checkbox-input"
            data-pc-section="input"
            type="checkbox"
          />
          <div
            class="p-checkbox-box"
            data-p-disabled="false"
            data-p-highlight="true"
            data-pc-section="box"
          >
            <svg
              fill="currentColor"
              height="14"
              viewBox="0 0 24 24"
              width="14"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clip-rule="evenodd"
                d="M21.5099 6.40005L10.12 19.7129L2.55029 12.2976L3.94985 10.8689L9.99122 16.787L19.9902 5.09985L21.5099 6.40005Z"
                fill-rule="evenodd"
              />
            </svg>
          </div>
        </div>
      </div>
      <div
        class="om-react-ui-checkbox-beta-content"
      >
        <span
          class="om-react-ui-checkbox-beta-label"
        >
          Test
        </span>
      </div>
    </label>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`CheckboxBeta renders correctly 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <label
        class="om-react-ui-checkbox-beta"
      >
        <div
          class="om-react-ui-checkbox-beta-box-wrapper"
        >
          <div
            class="om-react-ui-checkbox-beta-box p-checkbox p-component"
            data-p-disabled="false"
            data-p-highlight="false"
            data-pc-name="checkbox"
            data-pc-section="root"
          >
            <input
              aria-invalid="false"
              class="p-checkbox-input"
              data-pc-section="input"
              type="checkbox"
            />
            <div
              class="p-checkbox-box"
              data-p-disabled="false"
              data-p-highlight="false"
              data-pc-section="box"
            />
          </div>
        </div>
        <div
          class="om-react-ui-checkbox-beta-content"
        >
          <span
            class="om-react-ui-checkbox-beta-label"
          >
            Test
          </span>
        </div>
      </label>
    </div>
  </body>,
  "container": <div>
    <label
      class="om-react-ui-checkbox-beta"
    >
      <div
        class="om-react-ui-checkbox-beta-box-wrapper"
      >
        <div
          class="om-react-ui-checkbox-beta-box p-checkbox p-component"
          data-p-disabled="false"
          data-p-highlight="false"
          data-pc-name="checkbox"
          data-pc-section="root"
        >
          <input
            aria-invalid="false"
            class="p-checkbox-input"
            data-pc-section="input"
            type="checkbox"
          />
          <div
            class="p-checkbox-box"
            data-p-disabled="false"
            data-p-highlight="false"
            data-pc-section="box"
          />
        </div>
      </div>
      <div
        class="om-react-ui-checkbox-beta-content"
      >
        <span
          class="om-react-ui-checkbox-beta-label"
        >
          Test
        </span>
      </div>
    </label>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`CheckboxBeta renders direction right 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <label
        class="om-react-ui-checkbox-beta om-react-ui-checkbox-beta-right"
      >
        <div
          class="om-react-ui-checkbox-beta-content"
        >
          <span
            class="om-react-ui-checkbox-beta-label"
          >
            Test
          </span>
        </div>
        <div
          class="om-react-ui-checkbox-beta-box-wrapper"
        >
          <div
            class="om-react-ui-checkbox-beta-box p-checkbox p-component"
            data-p-disabled="false"
            data-p-highlight="false"
            data-pc-name="checkbox"
            data-pc-section="root"
          >
            <input
              aria-invalid="false"
              class="p-checkbox-input"
              data-pc-section="input"
              type="checkbox"
            />
            <div
              class="p-checkbox-box"
              data-p-disabled="false"
              data-p-highlight="false"
              data-pc-section="box"
            />
          </div>
        </div>
      </label>
    </div>
  </body>,
  "container": <div>
    <label
      class="om-react-ui-checkbox-beta om-react-ui-checkbox-beta-right"
    >
      <div
        class="om-react-ui-checkbox-beta-content"
      >
        <span
          class="om-react-ui-checkbox-beta-label"
        >
          Test
        </span>
      </div>
      <div
        class="om-react-ui-checkbox-beta-box-wrapper"
      >
        <div
          class="om-react-ui-checkbox-beta-box p-checkbox p-component"
          data-p-disabled="false"
          data-p-highlight="false"
          data-pc-name="checkbox"
          data-pc-section="root"
        >
          <input
            aria-invalid="false"
            class="p-checkbox-input"
            data-pc-section="input"
            type="checkbox"
          />
          <div
            class="p-checkbox-box"
            data-p-disabled="false"
            data-p-highlight="false"
            data-pc-section="box"
          />
        </div>
      </div>
    </label>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`CheckboxBeta renders disabled state 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <label
        class="om-react-ui-checkbox-beta"
      >
        <div
          class="om-react-ui-checkbox-beta-box-wrapper"
        >
          <div
            class="om-react-ui-checkbox-beta-box p-checkbox p-component p-disabled"
            data-p-disabled="true"
            data-p-highlight="false"
            data-pc-name="checkbox"
            data-pc-section="root"
          >
            <input
              aria-invalid="false"
              class="p-checkbox-input"
              data-pc-section="input"
              disabled=""
              type="checkbox"
            />
            <div
              class="p-checkbox-box"
              data-p-disabled="true"
              data-p-highlight="false"
              data-pc-section="box"
            />
          </div>
        </div>
        <div
          class="om-react-ui-checkbox-beta-content"
        >
          <span
            class="om-react-ui-checkbox-beta-label"
          >
            Test
          </span>
        </div>
      </label>
    </div>
  </body>,
  "container": <div>
    <label
      class="om-react-ui-checkbox-beta"
    >
      <div
        class="om-react-ui-checkbox-beta-box-wrapper"
      >
        <div
          class="om-react-ui-checkbox-beta-box p-checkbox p-component p-disabled"
          data-p-disabled="true"
          data-p-highlight="false"
          data-pc-name="checkbox"
          data-pc-section="root"
        >
          <input
            aria-invalid="false"
            class="p-checkbox-input"
            data-pc-section="input"
            disabled=""
            type="checkbox"
          />
          <div
            class="p-checkbox-box"
            data-p-disabled="true"
            data-p-highlight="false"
            data-pc-section="box"
          />
        </div>
      </div>
      <div
        class="om-react-ui-checkbox-beta-content"
      >
        <span
          class="om-react-ui-checkbox-beta-label"
        >
          Test
        </span>
      </div>
    </label>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`CheckboxBeta renders indeterminate state 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <label
        class="om-react-ui-checkbox-beta om-react-ui-checkbox-beta-indeterminate"
      >
        <div
          class="om-react-ui-checkbox-beta-box-wrapper"
        >
          <div
            class="om-react-ui-checkbox-beta-box p-checkbox p-component p-highlight"
            data-p-disabled="false"
            data-p-highlight="true"
            data-pc-name="checkbox"
            data-pc-section="root"
          >
            <input
              aria-invalid="false"
              checked=""
              class="p-checkbox-input"
              data-pc-section="input"
              type="checkbox"
            />
            <div
              class="p-checkbox-box"
              data-p-disabled="false"
              data-p-highlight="true"
              data-pc-section="box"
            >
              <svg
                fill="currentColor"
                height="14"
                viewBox="0 0 24 24"
                width="14"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  clip-rule="evenodd"
                  d="M21 13L3 13V11L21 11V13Z"
                  fill-rule="evenodd"
                />
              </svg>
            </div>
          </div>
        </div>
        <div
          class="om-react-ui-checkbox-beta-content"
        >
          <span
            class="om-react-ui-checkbox-beta-label"
          >
            Test
          </span>
        </div>
      </label>
    </div>
  </body>,
  "container": <div>
    <label
      class="om-react-ui-checkbox-beta om-react-ui-checkbox-beta-indeterminate"
    >
      <div
        class="om-react-ui-checkbox-beta-box-wrapper"
      >
        <div
          class="om-react-ui-checkbox-beta-box p-checkbox p-component p-highlight"
          data-p-disabled="false"
          data-p-highlight="true"
          data-pc-name="checkbox"
          data-pc-section="root"
        >
          <input
            aria-invalid="false"
            checked=""
            class="p-checkbox-input"
            data-pc-section="input"
            type="checkbox"
          />
          <div
            class="p-checkbox-box"
            data-p-disabled="false"
            data-p-highlight="true"
            data-pc-section="box"
          >
            <svg
              fill="currentColor"
              height="14"
              viewBox="0 0 24 24"
              width="14"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clip-rule="evenodd"
                d="M21 13L3 13V11L21 11V13Z"
                fill-rule="evenodd"
              />
            </svg>
          </div>
        </div>
      </div>
      <div
        class="om-react-ui-checkbox-beta-content"
      >
        <span
          class="om-react-ui-checkbox-beta-label"
        >
          Test
        </span>
      </div>
    </label>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`CheckboxBeta renders with description 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <label
        class="om-react-ui-checkbox-beta"
      >
        <div
          class="om-react-ui-checkbox-beta-box-wrapper"
        >
          <div
            class="om-react-ui-checkbox-beta-box p-checkbox p-component"
            data-p-disabled="false"
            data-p-highlight="false"
            data-pc-name="checkbox"
            data-pc-section="root"
          >
            <input
              aria-invalid="false"
              class="p-checkbox-input"
              data-pc-section="input"
              type="checkbox"
            />
            <div
              class="p-checkbox-box"
              data-p-disabled="false"
              data-p-highlight="false"
              data-pc-section="box"
            />
          </div>
        </div>
        <div
          class="om-react-ui-checkbox-beta-content"
        >
          <span
            class="om-react-ui-checkbox-beta-label"
          >
            Label
          </span>
          <span
            class="om-react-ui-checkbox-beta-description"
          >
            Description
          </span>
        </div>
      </label>
    </div>
  </body>,
  "container": <div>
    <label
      class="om-react-ui-checkbox-beta"
    >
      <div
        class="om-react-ui-checkbox-beta-box-wrapper"
      >
        <div
          class="om-react-ui-checkbox-beta-box p-checkbox p-component"
          data-p-disabled="false"
          data-p-highlight="false"
          data-pc-name="checkbox"
          data-pc-section="root"
        >
          <input
            aria-invalid="false"
            class="p-checkbox-input"
            data-pc-section="input"
            type="checkbox"
          />
          <div
            class="p-checkbox-box"
            data-p-disabled="false"
            data-p-highlight="false"
            data-pc-section="box"
          />
        </div>
      </div>
      <div
        class="om-react-ui-checkbox-beta-content"
      >
        <span
          class="om-react-ui-checkbox-beta-label"
        >
          Label
        </span>
        <span
          class="om-react-ui-checkbox-beta-description"
        >
          Description
        </span>
      </div>
    </label>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
